# learn-rust

./: LICENSE  README.md
essentials/: Cargo.toml
essentials/src/: 02_ownership.rs  date_example.rs  enums.rs  hello_rust.rs  lifetimes.rs  main.rs  struct_enum.rs  structs.rs  utils.rs  variables.rs
hello_rust/: Cargo.toml  main.rs
my_libs/date_calc/: Cargo.toml
my_libs/date_calc/src/: basic.rs  date_diff.rs  lib.rs
rust-surrealdb/: Cargo.toml
rust-surrealdb/src/: main.rs
udemy-data-structures/: .gitignore  Cargo.toml
udemy-data-structures/src/: 00_struct_enum_intro.rs  01_result_enum.rs  02_iterator.rs  99_date_demo.rs  main.rs
variables/: Cargo.toml
variables/src/: main.rs  utils.rs  variables.rs
