[package]
name = "rust-surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# surrealdb = "1.0.0-beta.8"
surrealdb = { version = "1.0.0-beta.8", default-features = true }

# surrealdb = { version = "1.0.0-beta.8", default-features = false, features = [
#     'parallel',
#     'kv-mem',
# ] }

# pkg-config = "0.3.26"
# openssl-sys = "0.9.79"

tokio = { version = "1", features = ["full"] }
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
