[package]
name = "udemy-data-structures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
codegen-units = 1
lto = true
panic = "abort"

[lib]
name = "date_calc"
path = "../my_libs/date_calc/src/lib.rs"